unpackaged/main/default/objects/FS_Transcript__c/FS_Transcript__c.object-meta.xml
<CustomObject>
    <label>Transcript</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Transcript</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transcripts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>