unpackaged/main/default/objects/FS_Transcript__c/fields/FS_Attendee__c.field-meta.xml
<CustomField>
    <fullName>FS_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>EventApi__Attendee__c</referenceTo>
    <relationshipLabel>Transcripts</relationshipLabel>
    <relationshipName>Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>