unpackaged/main/default/objects/FS_Transcript__c/fields/FS_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>