unpackaged/main/default/objects/FS_Transcript__c/fields/FS_Contact__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact tied to the transcript record</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Transcripts</relationshipLabel>
    <relationshipName>Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>