unpackaged/main/default/objects/FS_Transcript__c/fields/FS_Diversity_InclusionEliminationofBias__c.field-meta.xml
<CustomField>
    <fullName>FS_Diversity_InclusionEliminationofBias__c</fullName>
    <label>DIE - AT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>