unpackaged/main/default/objects/FS_Transcript__c/fields/FS_Ethics_and_Professionalism_Credits__c.field-meta.xml
<CustomField>
    <fullName>FS_Ethics_and_Professionalism_Credits__c</fullName>
    <label>Ethics and Professionalism - AT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>