unpackaged/main/default/objects/FS_Transcript__c/fields/FS_Event__c.field-meta.xml
<CustomField>
    <fullName>FS_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <referenceTo>EventApi__Event__c</referenceTo>
    <relationshipLabel>Transcripts</relationshipLabel>
    <relationshipName>Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>