unpackaged/main/default/objects/FS_Transcript__c/fields/FS_External_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>FS_External_Sales_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable if the corresponding Order was created outside of Fonteva.</inlineHelpText>
    <label>External Sales Order</label>
    <type>Checkbox</type>
</CustomField>