unpackaged/main/default/objects/FS_Transcript__c/fields/FS_Law_Practice_Management_Credits__c.field-meta.xml
<CustomField>
    <fullName>FS_Law_Practice_Management_Credits__c</fullName>
    <label>Law Practice Management - AT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>