unpackaged/main/default/objects/FS_Transcript__c/fields/FS_LMS_ID__c.field-meta.xml
<CustomField>
    <fullName>FS_LMS_ID__c</fullName>
    <description>Stores the Completed Registration Id from CE21</description>
    <inlineHelpText>Stores the Completed Registration Id from CE21</inlineHelpText>
    <label>LMS ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>