unpackaged/main/default/objects/FS_Transcript__c/fields/FS_Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>FS_Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Order Line</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Transcripts</relationshipLabel>
    <relationshipName>Transcripts</relationshipName>
    <type>Lookup</type>
</CustomField>