unpackaged/main/default/objects/FS_Transcript__c/fields/FS_Skills_Credits__c.field-meta.xml
<CustomField>
    <fullName>FS_Skills_Credits__c</fullName>
    <label>Skills - AT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>