unpackaged/main/default/objects/FS_Transcript__c/fields/FS_Total_Credits__c.field-meta.xml
<CustomField>
    <fullName>FS_Total_Credits__c</fullName>
    <formula>FSAreas_of_Professional_Practice_Credits__c  +  FS_Diversity_InclusionEliminationofBias__c  +  FS_Ethics_and_Professionalism_Credits__c  +  FS_Law_Practice_Management_Credits__c  +  FS_Skills_Credits__c</formula>
    <label>Total Credits - AT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>