unpackaged/main/default/objects/FS_Transcript__c/fields/FSAreas_of_Professional_Practice_Credits__c.field-meta.xml
<CustomField>
    <fullName>FSAreas_of_Professional_Practice_Credits__c</fullName>
    <label>Areas of Professional Practice - AT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>