unpackaged/main/default/objects/FS_Transcript__c/fields/PB_DIE_SP__c.field-meta.xml
<CustomField>
    <fullName>PB_DIE_SP__c</fullName>
    <label>DIE - SP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>