unpackaged/main/default/objects/FS_Transcript__c/fields/PB_Ethics_and_Professionalism_Credits_SP__c.field-meta.xml
<CustomField>
    <fullName>PB_Ethics_and_Professionalism_Credits_SP__c</fullName>
    <label>Ethics and Professionalism - SP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>