unpackaged/main/default/objects/FS_Transcript__c/fields/PB_Skills_SP__c.field-meta.xml
<CustomField>
    <fullName>PB_Skills_SP__c</fullName>
    <label>Skills - SP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>