unpackaged/main/default/objects/FS_Transcript__c/fields/PB_Total_Credits_SP__c.field-meta.xml
<CustomField>
    <fullName>PB_Total_Credits_SP__c</fullName>
    <formula>PBAreas_of_Professional_Practice_SP__c  +  PB_DIE_SP__c  +  PB_Ethics_and_Professionalism_Credits_SP__c  +  PB_Law_Practice_Management_SP__c  +  PB_Skills_SP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credits - SP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>