unpackaged/main/default/objects/FS_Transcript__c/fields/PBAreas_of_Professional_Practice_SP__c.field-meta.xml
<CustomField>
    <fullName>PBAreas_of_Professional_Practice_SP__c</fullName>
    <label>Areas of Professional Practice - SP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>